ExportXMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • v4.0, v3.6, v3.4, v3.2
    • 45
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      CVE-2018-20803

      Title: Infinite loop in aggregation expression

      Description:
      A user authorized to perform database queries may trigger denial of service by issuing specially crafted queries, which loop indefinitely in mathematics processing while retaining locks. This issue affects: MongoDB Inc. MongoDB Server v4.0 versions prior to 4.0.5; v3.6 versions prior to 3.6.10; v3.4 versions prior to 3.4.19.

      CVSS score:
      This issue's CVSS:3.1 severity is scored at 6.5 using the following scoring metrics:
      CVSS:3.1/AV:N/AC:L/PR:L/UI:N/S:U/C:N/I:N/A:H

      Affected versions:
      MongoDB Inc. MongoDB Server v4.0 versions prior to 4.0.5; v3.6 versions prior to 3.6.10; v3.4 versions prior to 3.4.19.

      CWE: CWE-835: Loop with Unreachable Exit Condition ('Infinite Loop')

            Assignee:
            Ian Boros
            Reporter:
            Ian Boros
            Votes:
            0 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved: