SERVER-38070 Fix infinite loop in agg expression